[package]
name = "jemalloc-info"
description = "A small library for exporting jemalloc allocation data in Elixir"
repository = "https://github.com/discord/jemalloc_info"
license = "MIT"
version = "0.2.1"
authors = ["oceans <sea@likeanocean.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
jemalloc-ctl = "0.3"
rustler = "0.22"
