[package]
name = "jemalloc-info"
description = "A small library for exporting jemalloc allocation data in Elixir"
repository = "https://github.com/discord/jemalloc_info"
license = "MIT"
version = "0.5.0"
authors = ["oceans <sea@likeanocean.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
jemalloc-ctl = "0.5.0"
rustler = "0.25.0"
